<resources>
    <string name="app_name">Activity3</string>
    <string name="login">LOGIN USER</string>
    <string name="un">Username</string>
    <string name="ps">Password</string>
    <string name="jdl">Form Pendaftaraan</string>
    <string name="nm">Nama</string>
    <string name="al">Alamat</string>
    <string name="btn">Daftar</string>
    <string name="no">No HP</string>
    <string name="si">SIGN IN</string>
    <string name="hsl">Tampilan Hasil</string>
    <string name="txtun">Masukkan Username</string>
    <string name="txtps">Masukkan Password</string>
    <string name="txtnm">Masukkan Nama</string>
    <string name="txtal">Masukkan Alamat</string>
    <string name="txthp">Masukkan Nomor Handphone</string>
    <string name="txt2">Tampilan Hasil Menu 2</string>
    <string name="txt3">Tampilan Hasil Menu 3</string>
</resources>
